--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/portfolio",   
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
